--- a/doubleRangeSlider/sliderStyle.css
+++ b/doubleRangeSlider/sliderStyle.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 40vh;
   display: -ms-grid;
   display: grid;
   background-color: #ffffff;
@@ -17,17 +17,17 @@ body {
 
 .wrapper {
   position: relative;
-  width: 95vmin;
-  background-color: #ffffff;
-  padding: 50px 40px 20px 40px;
-  border-radius: 10px;
+  width: 75vmin;
+  background-color: #eee;
+  padding: 1px 1px 1px 1px;
+  border-radius: 0px;
 }
 
 .container {
   position: relative;
   width: 100%;
-  height: 100px;
-  margin-top: 30px;
+  height: 50px;
+  margin-top: 1px;
 }
 
 input[type="range"] {
@@ -51,7 +51,17 @@ input[type="range"] {
   margin: auto;
   top: 0;
   bottom: 0;
-  border-radius: 5px;
+  border-radius: 5/5px;
+}
+
+.slider-track2 {
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  margin: auto;
+  top: 10px;
+  bottom: 10px;
+  border-radius: 5/5px;
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
@@ -105,6 +115,7 @@ input[type="range"]:active::-webkit-slider-thumb {
   border: 3px solid #3264fe;
 }
 
+
 .values {
   background-color: #3264fe;
   width: 32%;
@@ -123,11 +134,20 @@ input[type="range"]:active::-webkit-slider-thumb {
   position: absolute;
   height: 0;
   width: 0;
-  border-top: 15px solid #3264fe;
+  border-top: 20px solid #3264fe;
   border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
+  border-right: 1px solid transparent;
   margin: auto;
-  bottom: -14px;
-  left: 0;
-  right: 0;
+  bottom: 5px;
+  left: -10px;
+  right: 90px;
+}
+
+div.absolute {
+  position: absolute;
+  top: 0px;
+  right: -225px;
+  width: 300px;
+  height: 50px;
+
 }
