--- a/doubleRangeSlider/sliderStyle.css
+++ b/doubleRangeSlider/sliderStyle.css
@@ -18,7 +18,7 @@ body {
 .wrapper {
   position: relative;
   width: 75vmin;
-  background-color: #eee;
+  background-color: #ffffff;
   padding: 1px 1px 1px 1px;
   border-radius: 0px;
 }
@@ -56,6 +56,39 @@ input[type="range"] {
 }
 
 .slider-track2 {
+  background-color: #dadae5;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  margin: auto;
+  top: 10px;
+  bottom: 10px;
+  border-radius: 5/5px;
+}
+
+.slider-track3 {
+  background-color: #dadae5;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  margin: auto;
+  top: 10px;
+  bottom: 10px;
+  border-radius: 5/5px;
+}
+
+.slider-track4 {
+  background-color: #dadae5;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  margin: auto;
+  top: 10px;
+  bottom: 10px;
+  border-radius: 5/5px;
+}
+
+.slider-track5 {
   background-color: #dadae5;
   width: 100%;
   height: 5px;
@@ -140,8 +173,9 @@ input[type="range"]:active::-webkit-slider-thumb {
   border-left: 15px solid transparent;
   border-right: 1px solid transparent;
   margin: auto;
-  bottom: 5px;
-  left: -10px;
+  top: 10px;
+  bottom: 10px;
+  left: -21px;
   right: 90px;
 }
 
